--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,18 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.21
-	yarn_mappings=1.21+build.1
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.1
 	loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 1.3.0+1.21
+	mod_version = 1.3.0-1.21-neo
 	maven_group = eu.pb4
 	archives_base_name = entity-view-distance
 
 # Dependencies
 	fabric_version=0.100.1+1.21
+
+loom.platform = neoforge
+neoforge_version = 21.1.66
+yarn_mappings_patch_version = 1.21+build.4
