--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,6 @@
-buildscript {
-	dependencies {
-		classpath "de.guntram.mcmod:crowdin-translate:1.4+1.19.3"
-	}
-	repositories {
-		maven {
-			name = 'CrowdinTranslate source'
-			url = "https://minecraft.guntram.de/maven/"
-		}
-	}
-}
 
 plugins {
-	id 'fabric-loom' version '1.7.+'
+	id 'dev.architectury.loom' version '1.6-SNAPSHOT'
 	id 'maven-publish'
 	id "com.modrinth.minotaur" version "2.+"
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
@@ -23,16 +12,16 @@ targetCompatibility = JavaVersion.VERSION_21
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
-
-apply plugin: 'de.guntram.mcmod.crowdin-translate'
-crowdintranslate.crowdinProjectName = 'patbox-mods'
-crowdintranslate.jsonSourceName = 'entity_view_distance'
-crowdintranslate.minecraftProjectName = 'entityviewdistance'
-crowdintranslate.verbose = false
+base {
+	archivesName = project.archives_base_name
+}
 
 repositories {
 	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-	maven { url 'https://maven.nucleoid.xyz' }
+	maven {
+		name = 'NeoForged'
+		url = 'https://maven.neoforged.net/releases'
+	}
 	maven { url 'https://maven.gegy.dev' }
 	maven { url 'https://api.modrinth.com/maven' }
 	maven { url 'https://maven.terraformersmc.com/releases/' }
@@ -46,30 +35,20 @@ loom {
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	mappings loom.layered {
+		it.mappings("net.fabricmc:yarn:$project.yarn_mappings:v2")
+		it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$project.yarn_mappings_patch_version")
+	}
+	neoForge "net.neoforged:neoforge:$project.neoforge_version"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	modImplementation include("me.lucko:fabric-permissions-api:0.1-SNAPSHOT")
-
-	//modImplementation include("dev.lambdaurora:spruceui:5.0.3+1.20.4")
-
-	modCompileOnly("maven.modrinth:sodium:mc1.21-0.5.9")
-	//modLocalRuntime("maven.modrinth:sodium:mc1.19-0.4.2")
-
-	modCompileOnly("com.terraformersmc:modmenu:11.0.0")
-	//modLocalRuntime("com.terraformersmc:modmenu:4.0.0")
 
 }
 
 processResources {
 	inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('META-INF/neoforge.mods.toml') {
+		expand version: project.version
 	}
 }
 
@@ -81,7 +60,7 @@ tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
 
 	// Minecraft 1.17 (21w19a) upwards uses Java 16.
-	it.options.release = 16
+	it.options.release = 21
 }
 
 java {
